{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "197ed14e-026d-416a-731e-2d645452b3cf",
  "resources": [
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:network-acl/acl-0ffc34091681da305",
            "default_network_acl_id": "acl-0ffc34091681da305",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ffc34091681da305",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "864899835152",
            "subnet_ids": [
              "subnet-043776bbb11a19a31",
              "subnet-07b129947a8cd2c76"
            ],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc-testing.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:route-table/rtb-0b9b58e94109d6ad2",
            "default_route_table_id": "rtb-0b9b58e94109d6ad2",
            "id": "rtb-0b9b58e94109d6ad2",
            "owner_id": "864899835152",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc-testing.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:security-group/sg-031c894d9e6539960",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-031c894d9e6539960",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "864899835152",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc-testing.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:internet-gateway/igw-01fb8d5480267beea",
            "id": "igw-01fb8d5480267beea",
            "owner_id": "864899835152",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "dependencies": [
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01fb8d5480267beea",
            "id": "r-rtb-090392d0ca34af3b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090392d0ca34af3b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_internet_gateway.this",
            "module.my-vpc-testing.aws_route_table.public",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:route-table/rtb-0f6b253be21635404",
            "id": "rtb-0f6b253be21635404",
            "owner_id": "864899835152",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:route-table/rtb-090392d0ca34af3b0",
            "id": "rtb-090392d0ca34af3b0",
            "owner_id": "864899835152",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ecc39835215cf7e",
            "route_table_id": "rtb-0f6b253be21635404",
            "subnet_id": "subnet-043776bbb11a19a31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_route_table.private",
            "module.my-vpc-testing.aws_subnet.private",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b557c2e98231d1",
            "route_table_id": "rtb-090392d0ca34af3b0",
            "subnet_id": "subnet-07b129947a8cd2c76"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_route_table.public",
            "module.my-vpc-testing.aws_subnet.public",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:subnet/subnet-043776bbb11a19a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043776bbb11a19a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899835152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:subnet/subnet-07b129947a8cd2c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b129947a8cd2c76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899835152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0aa8b86ed102b8dde"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-vpc-testing.aws_vpc.this",
            "module.my-vpc-testing.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc-testing",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864899835152:vpc/vpc-0aa8b86ed102b8dde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffc34091681da305",
            "default_route_table_id": "rtb-0b9b58e94109d6ad2",
            "default_security_group_id": "sg-031c894d9e6539960",
            "dhcp_options_id": "dopt-0780a6f6cad69cc1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa8b86ed102b8dde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9b58e94109d6ad2",
            "owner_id": "864899835152",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            }
          }
        }
      ]
    }
  ]
}